@@ -149,7 +149,7 @@ static int zfsfuse_getattr(fuse_req_t req, fuse_ino_t ino, struct fuse_file_info
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, ino, &znode);
+	int error = zfs_zget_common(zfsvfs, ino, &znode, ZFS_ZGET_UNLINKED);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
 		/* If the inode we are trying to get was recently deleted
@@ -197,7 +197,7 @@ static int zfsfuse_lookup(fuse_req_t req, fuse_ino_t parent, const char *name)
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, parent, &znode);
+	int error = zfs_zget_common(zfsvfs, parent, &znode, ZFS_ZGET_UNLINKED);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
 		/* If the inode we are trying to get was recently deleted
@@ -264,7 +264,7 @@ static int zfsfuse_opendir(fuse_req_t req, fuse_ino_t ino, struct fuse_file_info
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, ino, &znode);
+	int error = zfs_zget_common(zfsvfs, ino, &znode, ZFS_ZGET_UNLINKED);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
 		/* If the inode we are trying to get was recently deleted
@@ -508,10 +508,12 @@ static int zfsfuse_opencreate(fuse_req_t req, fuse_ino_t ino, struct fuse_file_i
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, ino, &znode);
+	int error = zfs_zget_common(zfsvfs, ino, &znode, 0);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
-		return error;
+		/* If the inode we are trying to get was recently deleted
+		   dnode_hold_impl will return EEXIST instead of ENOENT */
+		return error == EEXIST ? ENOENT : error;
 	}
 
 	ASSERT(znode != NULL);
@@ -662,7 +664,7 @@ static int zfsfuse_readlink(fuse_req_t req, fuse_ino_t ino)
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, ino, &znode);
+	int error = zfs_zget_common(zfsvfs, ino, &znode, 0);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
 		/* If the inode we are trying to get was recently deleted
@@ -781,10 +783,12 @@ static int zfsfuse_mkdir(fuse_req_t req, fuse_ino_t parent, const char *name, mo
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, parent, &znode);
+	int error = zfs_zget_common(zfsvfs, parent, &znode, 0);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
-		return error;
+		/* If the inode we are trying to get was recently deleted
+		   dnode_hold_impl will return EEXIST instead of ENOENT */
+		return error == EEXIST ? ENOENT : error;
 	}
 
 	ASSERT(znode != NULL);
@@ -853,7 +857,7 @@ static int zfsfuse_rmdir(fuse_req_t req, fuse_ino_t parent, const char *name)
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, parent, &znode);
+	int error = zfs_zget_common(zfsvfs, parent, &znode, 0);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
 		/* If the inode we are trying to get was recently deleted
@@ -909,7 +913,7 @@ static int zfsfuse_setattr(fuse_req_t req, fuse_ino_t ino, struct stat *attr, in
 	if(fi == NULL) {
 		znode_t *znode;
 
-		error = zfs_zget(zfsvfs, ino, &znode);
+		error = zfs_zget_common(zfsvfs, ino, &znode, ZFS_ZGET_UNLINKED);
 		if(error) {
 			ZFS_EXIT(zfsvfs);
 			/* If the inode we are trying to get was recently deleted
@@ -1032,7 +1036,7 @@ static int zfsfuse_unlink(fuse_req_t req, fuse_ino_t parent, const char *name)
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, parent, &znode);
+	int error = zfs_zget_common(zfsvfs, parent, &znode, 0);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
 		/* If the inode we are trying to get was recently deleted
@@ -1128,10 +1132,12 @@ static int zfsfuse_mknod(fuse_req_t req, fuse_ino_t parent, const char *name, mo
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, parent, &znode);
+	int error = zfs_zget_common(zfsvfs, parent, &znode, 0);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
-		return error;
+		/* If the inode we are trying to get was recently deleted
+		   dnode_hold_impl will return EEXIST instead of ENOENT */
+		return error == EEXIST ? ENOENT : error;
 	}
 
 	ASSERT(znode != NULL);
@@ -1208,10 +1214,12 @@ static int zfsfuse_symlink(fuse_req_t req, const char *link, fuse_ino_t parent, 
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, parent, &znode);
+	int error = zfs_zget_common(zfsvfs, parent, &znode, 0);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
-		return error;
+		/* If the inode we are trying to get was recently deleted
+		   dnode_hold_impl will return EEXIST instead of ENOENT */
+		return error == EEXIST ? ENOENT : error;
 	}
 
 	ASSERT(znode != NULL);
@@ -1288,19 +1296,23 @@ static int zfsfuse_rename(fuse_req_t req, fuse_ino_t parent, const char *name, f
 
 	znode_t *p_znode, *np_znode;
 
-	int error = zfs_zget(zfsvfs, parent, &p_znode);
+	int error = zfs_zget_common(zfsvfs, parent, &p_znode, 0);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
-		return error;
+		/* If the inode we are trying to get was recently deleted
+		   dnode_hold_impl will return EEXIST instead of ENOENT */
+		return error == EEXIST ? ENOENT : error;
 	}
 
 	ASSERT(p_znode != NULL);
 
-	error = zfs_zget(zfsvfs, newparent, &np_znode);
+	error = zfs_zget_common(zfsvfs, newparent, &np_znode, 0);
 	if(error) {
 		VN_RELE(ZTOV(p_znode));
 		ZFS_EXIT(zfsvfs);
-		return error;
+		/* If the inode we are trying to get was recently deleted
+		   dnode_hold_impl will return EEXIST instead of ENOENT */
+		return error == EEXIST ? ENOENT : error;
 	}
 
 	ASSERT(np_znode != NULL);
@@ -1380,19 +1392,23 @@ static int zfsfuse_link(fuse_req_t req, fuse_ino_t ino, fuse_ino_t newparent, co
 
 	znode_t *td_znode, *s_znode;
 
-	int error = zfs_zget(zfsvfs, ino, &s_znode);
+	int error = zfs_zget_common(zfsvfs, ino, &s_znode, 0);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
-		return error;
+		/* If the inode we are trying to get was recently deleted
+		   dnode_hold_impl will return EEXIST instead of ENOENT */
+		return error == EEXIST ? ENOENT : error;
 	}
 
 	ASSERT(s_znode != NULL);
 
-	error = zfs_zget(zfsvfs, newparent, &td_znode);
+	error = zfs_zget_common(zfsvfs, newparent, &td_znode, 0);
 	if(error) {
 		VN_RELE(ZTOV(s_znode));
 		ZFS_EXIT(zfsvfs);
-		return error;
+		/* If the inode we are trying to get was recently deleted
+		   dnode_hold_impl will return EEXIST instead of ENOENT */
+		return error == EEXIST ? ENOENT : error;
 	}
 
 	vnode_t *svp = ZTOV(s_znode);
@@ -1462,10 +1478,12 @@ static int zfsfuse_access(fuse_req_t req, fuse_ino_t ino, int mask)
 
 	znode_t *znode;
 
-	int error = zfs_zget(zfsvfs, ino, &znode);
+	int error = zfs_zget_common(zfsvfs, ino, &znode, ZFS_ZGET_UNLINKED);
 	if(error) {
 		ZFS_EXIT(zfsvfs);
-		return error;
+		/* If the inode we are trying to get was recently deleted
+		   dnode_hold_impl will return EEXIST instead of ENOENT */
+		return error == EEXIST ? ENOENT : error;
 	}
 
 	ASSERT(znode != NULL);
